# SHADER

./: .gitignore  Cargo.toml  GEMINI.md  README.md  build.sh
docs/: SPEC.md
src/: lib.rs
web/: index.html  main.js  package-lock.json  package.json  style.css  vite.config.js
web/pkg/: README.md  package.json  shadersmith.d.ts  shadersmith.js  shadersmith_bg.wasm  shadersmith_bg.wasm.d.ts
web/scripts/: gen-shaders.mjs
web/shaders/: 001-plasma-ember.wgsl  002-plasma-prism.wgsl  003-plasma-neon.wgsl  004-plasma-tide.wgsl  005-plasma-phosphor.wgsl  006-ripple-ember.wgsl  007-ripple-prism.wgsl  008-ripple-neon.wgsl  009-ripple-tide.wgsl  010-ripple-phosphor.wgsl  011-swirl-ember.wgsl  012-swirl-prism.wgsl  013-swirl-neon.wgsl  014-swirl-tide.wgsl  015-swirl-phosphor.wgsl  016-tunnel-ember.wgsl  017-tunnel-prism.wgsl  018-tunnel-neon.wgsl  019-tunnel-tide.wgsl  020-tunnel-phosphor.wgsl  021-spiral-ember.wgsl  022-spiral-prism.wgsl  023-spiral-neon.wgsl  024-spiral-tide.wgsl  025-spiral-phosphor.wgsl  026-kaleido-ember.wgsl  027-kaleido-prism.wgsl  028-kaleido-neon.wgsl  029-kaleido-tide.wgsl  030-kaleido-phosphor.wgsl  031-grid-ember.wgsl  032-grid-prism.wgsl  033-grid-neon.wgsl  034-grid-tide.wgsl  035-grid-phosphor.wgsl  036-checker-ember.wgsl  037-checker-prism.wgsl  038-checker-neon.wgsl  039-checker-tide.wgsl  040-checker-phosphor.wgsl  (+60 more)
